[workspace]
members = ["whamm_core", "wasmtime-runner", "wasm_playground/control_flow"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
failure = "0.1.8"
glob = "0.3.3"
lazy_static = "1.5.0"
itertools = "0.14.0"
#wirm = { path = "../wirm" }
wirm = "=2.2.0"

# For Tests
once_cell = "1.21.3"
wasm-bindgen = "0.2.108"

# For the wasmtime embedding for @static
wasmtime = "41.0.1"
wasi-common = "41.0.1"
wasmtime-wasi = "41.0.1"

# Logging
env_logger = "0.11.8"
log = "0.4.29"
termcolor = "1.4.1"

# Pest
pest = "2.8.5"
pest_derive = "2.8.5"

# Provider YAML configs
serde = { version = "1.0.228", features = ["derive"] }
serde_yml = "0.0.12"

# CLI
clap = { version = "4.5.56", features = ["derive", "cargo", "env"] }

wat = "1.244.0"

[package]
name = "whamm"
version.workspace = true
edition.workspace = true

[[bin]]
doc = false
name = "whamm"
path = "src/main.rs"

[dependencies]
failure = { workspace = true }
glob = { workspace = true }
lazy_static = { workspace = true }
itertools = { workspace = true }
#wirm = { path = "../wirm" }
wirm = { workspace = true }

# For Tests
once_cell = { workspace = true }
wasm-bindgen = { workspace = true }

# For the wasmtime embedding for @static
wasmtime = { workspace = true }
wasi-common = { workspace = true }

# Logging
env_logger = { workspace = true }
log = { workspace = true }
termcolor = { workspace = true }

# Pest
pest = { workspace = true }
pest_derive = { workspace = true }

# Provider YAML configs
serde = { workspace = true, features = ["derive"] }
serde_yml = { workspace = true }

# CLI
clap = { workspace = true, features = ["derive", "cargo", "env"] }

wat = { workspace = true }

[build-dependencies]
clap = { workspace = true, features = ["derive", "cargo", "env"] }
clap_mangen = "0.2.31"
glob = { workspace = true }
