[package]
name = "whamm"
version = "0.1.0"
edition = "2021"

[[bin]]
doc = false
name = "whamm"
path = "src/main.rs"

[dependencies]
failure = "0.1.5"
glob = "0.3.1"
lazy_static = "1.4.0"
itertools = "0.14.0"
#wirm = { path = "../wirm-COMP/wirm" }
wirm = "3.0.0"
wasmparser = "0.244.0"
wac-graph = "0.7.0"

# For the wasmtime embedding for @static
wasmtime = "38.0.3"
wasi-common = "38.0.3"

# Logging
env_logger = "0.10.2"
log = "0.4.20"
termcolor = "1.4.1"

# Pest
pest = "2.7.7"
pest_derive = "2.7.7"

# Provider YAML configs
serde = { version = "1.0", features = ["derive"] }
serde_yml = "0.0.12"

# CLI
clap = { version = "4.5.4", features = ["derive", "cargo", "env"] }

wat = "1.214.0"
colored = "3.1.1"

[build-dependencies]
clap = { version = "4.5.4", features = ["derive", "cargo", "env"] }
clap_mangen = "0.2.20"
glob = "0.3.1"
